chore(dclint): use dclint.config.yaml

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -97,7 +97,7 @@ jobs:
             docker-compose:
               - '**/docker-compose.*.yaml'
               - '**/docker-compose.yaml'
-              - 'dclint.config.json'
+              - 'dclint.config.yaml'
             dockerfile:
               - '**/Dockerfile*'
               - '.hadolint.yaml'
