--- a/.markdownlint-cli2.jsonc
+++ b/.markdownlint-cli2.jsonc
@@ -57,7 +57,7 @@
     "**/slprj/**/*",
     "**/target/**/*",
 
-    // Root (Cannot have leading /)
+    // Root (cannot have leading /)
     ".git/**/*",
     ".github/**/*",
     ".mypy_cache/**/*",
