--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -4,7 +4,7 @@
 AllCops:
   NewCops: enable
   Exclude:
-    # Anywhere (Folder mush have trailing /**/*)
+    # Anywhere
     - '**/*.DotSettings.user'
     - '**/*.aliases'
     - '**/*.asv'
@@ -50,7 +50,7 @@ AllCops:
     - '**/slprj/**/*'
     - '**/target/**/*'
 
-    # Root (Must have leading ./; Folder mush have trailing /**/*)
+    # Root (must have leading ./)
     - './.aider.chat.history.md'
     - './.aider.tags.cache.v3/**/*'
     - './.git/**/*'
@@ -64,7 +64,7 @@ AllCops:
     - './vendor/**/*'
     - './west-master-k3s.yaml'
 
-    # Directories (Folder mush have trailing /**/*)
+    # Directories
     - 'aerospace/hm-openaerostruct/n2.html'
     - 'aerospace/hm-openaerostruct/reports/**/*'
     - 'api/api-go/config/config_loader/opal_auth_public_key.pem'
