--- a/.ruff.toml
+++ b/.ruff.toml
@@ -47,7 +47,7 @@ exclude = [
   "**/slprj/**/*",
   "**/target/**/*",
 
-  # Root (Cannot have leading /)
+  # Root (cannot have leading /)
   ".git/**/*",
   ".github/**/*",
   ".mypy_cache/**/*",
