--- a/.textlintignore
+++ b/.textlintignore
@@ -1,6 +1,6 @@
 # https://textlint.github.io/docs/ignore.html#ignoring-files-textlintignore
 
-# Anywhere (Folder mush have trailing /**/*)
+# Anywhere
 **/*.DotSettings.user
 **/*.aliases
 **/*.asv
@@ -46,7 +46,7 @@
 **/slprj/**/*
 **/target/**/*
 
-# Root (Must have leading ./; Folder mush have trailing /**/*)
+# Root (must have leading ./)
 ./.git/**/*
 ./.github/**/*
 ./.mypy_cache/**/*
@@ -57,10 +57,10 @@
 ./submodules/**/*
 ./vendor/**/*
 ./west-master-k3s.yaml
-/.aider.chat.history.md
-/.aider.tags.cache.v3/**/*
+./.aider.chat.history.md
+./.aider.tags.cache.v3/**/*
 
-# Directories (Folder mush have trailing /**/*)
+# Directories
 aerospace/hm-openaerostruct/n2.html
 aerospace/hm-openaerostruct/reports/**/*
 api/api-go/config/config_loader/opal_auth_public_key.pem
