--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "commit": "commit",
     "lint-css": "stylelint '**/*.css'",
     "lint-css-fix": "stylelint --fix '**/*.css'",
-    "lint-docker-compose": "dclint . --recursive --config=dclint.config.json .",
-    "lint-docker-compose-fix": "dclint . --recursive --config=dclint.config.json --fix",
+    "lint-docker-compose": "dclint . --recursive --config=dclint.config.yaml",
+    "lint-docker-compose-fix": "dclint . --recursive --config=dclint.config.yaml --fix",
     "lint-html": "eslint .",
     "lint-html-fix": "eslint . --fix",
     "lint-json-eslint": "eslint .",
