chore(homebrew): combine homebrew tap and install commands

--- a/.github/workflows/.lint.yml
+++ b/.github/workflows/.lint.yml
@@ -27,6 +27,9 @@ name: . Lint
       dockerfile:
         required: true
         type: boolean
+      dotenv:
+        required: true
+        type: boolean
       editorconfig:
         required: true
         type: boolean
