--- a/.github/workflows/.test-mobile.yml
+++ b/.github/workflows/.test-mobile.yml
@@ -106,8 +106,7 @@ jobs:
           bundler-cache: true
       - name: Set up Tuist
         run: |
-          brew tap tuist/tuist
-          brew install --formula tuist
+          brew install tuist/tuist/tuist
       - name: Install dependencies
         working-directory: mobile/mobile-ios
         run: |
