--- a/cloud-cost/komiser/justfile
+++ b/cloud-cost/komiser/justfile
@@ -1,6 +1,5 @@
 komiser-install:
-    brew tap tailwarden/komiser
-    brew install komiser
+    brew install tailwarden/komiser/komiser
 
 komiser-start:
     # http://localhost:34552
