--- a/.mergify.yml
+++ b/.mergify.yml
@@ -692,6 +692,9 @@ pull_request_rules:
           - check-success=Test Machine Learning / Speaches | Test
           - check-skipped=Test Machine Learning / Speaches | Test
       - or:
+          - check-success=Test Machine Learning / NVIDIA NeMo | Test
+          - check-skipped=Test Machine Learning / NVIDIA NeMo | Test
+      - or:
           - check-success=Test Machine Learning / JiWER | Test
           - check-skipped=Test Machine Learning / JiWER | Test
       - or:
