--- a/.github/workflows/.static-type-check.yml
+++ b/.github/workflows/.static-type-check.yml
@@ -96,6 +96,7 @@ jobs:
           uv run poe static-type-check-python --package=audio.automatic-speech-recognition-inference.hm-faster-whisper
           uv run poe static-type-check-python --package=audio.automatic-speech-recognition-inference.hm-speaches
           uv run poe static-type-check-python --package=audio.automatic-speech-recognition-inference.hm-whisperx
+          uv run poe static-type-check-python --package=audio.automatic-speech-recognition-inference.nvidia-nemo
           uv run poe static-type-check-python --package=audio.speaker-diarization.hm-diart
           uv run poe static-type-check-python --package=audio.speaker-diarization.hm-senko
           uv run poe static-type-check-python --package=audio.voice-activity-detection.hm-silero-vad
