--- a/.github/workflows/.test-machine-learning.yml
+++ b/.github/workflows/.test-machine-learning.yml
@@ -210,6 +210,9 @@ name: . Test Machine Learning
       nvidia-dali:
         required: true
         type: boolean
+      nvidia-nemo:
+        required: true
+        type: boolean
       open-clip:
         required: true
         type: boolean
@@ -2131,6 +2134,39 @@ jobs:
           token: ${{ secrets.CODECOV_TOKEN }}
           slug: hongbo-miao/hongbomiao.com
           directory: audio/automatic-speech-recognition-inference/hm-speaches
+
+  nvidia-nemo-test:
+    name: NVIDIA NeMo | Test
+    if: ${{ inputs.workflow || inputs.nvidia-nemo }}
+    runs-on: ubuntu-24.04
+    timeout-minutes: 10
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v6.0.1
+      - name: Install uv
+        uses: astral-sh/setup-uv@v7.1.6
+        with:
+          version: 0.9.18
+          enable-cache: true
+          cache-dependency-glob: audio/automatic-speech-recognition-inference/nvidia-nemo/uv.lock
+      - name: Set up Python
+        uses: actions/setup-python@v6.1.0
+        with:
+          python-version-file: audio/automatic-speech-recognition-inference/nvidia-nemo/.python-version
+      - name: Install dependencies
+        working-directory: audio/automatic-speech-recognition-inference/nvidia-nemo
+        run: |
+          uv sync --dev
+      - name: Test
+        working-directory: audio/automatic-speech-recognition-inference/nvidia-nemo
+        run: |
+          uv run poe test-coverage
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v5.5.2
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          slug: hongbo-miao/hongbomiao.com
+          directory: audio/automatic-speech-recognition-inference/nvidia-nemo
 
   jiwer-test:
     name: JiWER | Test
