chore(transformers): rename folder

--- a/.github/workflows/.static-type-check.yml
+++ b/.github/workflows/.static-type-check.yml
@@ -186,7 +186,7 @@ jobs:
           uv run poe static-type-check-python --package=large-language-model-application.hm-llama-index.applications.chat-pdf
           uv run poe static-type-check-python --package=large-language-model-application.hm-pydantic-ai.applications.chat-pdf
           uv run poe static-type-check-python --package=large-language-model-evaluation.hm-deepeval
-          uv run poe static-type-check-python --package=large-language-model-inference.analyze-sentiment
+          uv run poe static-type-check-python --package=large-language-model-inference.hm-transformers
           uv run poe static-type-check-python --package=large-language-model-inference.hm-mlx-lm
           uv run poe static-type-check-python --package=large-language-model-inference.hm-sglang
           uv run poe static-type-check-python --package=large-language-model-inference.kv-caching
