--- a/.mergify.yml
+++ b/.mergify.yml
@@ -626,8 +626,8 @@ pull_request_rules:
           - check-success=Test Machine Learning / Gemma | Test
           - check-skipped=Test Machine Learning / Gemma | Test
       - or:
-          - check-success=Test Machine Learning / Analyze Sentiment | Test
-          - check-skipped=Test Machine Learning / Analyze Sentiment | Test
+          - check-success=Test Machine Learning / Transformers | Test
+          - check-skipped=Test Machine Learning / Transformers | Test
       - or:
           - check-success=Test Machine Learning / Kubeflow (calculate) | Test
           - check-skipped=Test Machine Learning / Kubeflow (calculate) | Test
